MIDIInstrument/MIDIInstrument.h


typedef struct tagMIDIPatchNameTable {
	void* m_pszTitle;
	long  m_lTitleLen;
	void* m_pszName[128];
	long  m_lNameLen[128];
	struct tagMIDIPatchNameTable* m_pBasedOn;
	struct tagMIDIPatchNameTable* m_pNextPatchNameTable;
	struct tagMIDIPatchNameTable* m_pPrevPatchNameTable;
	void* m_pParent;
} MIDIPatchNameTable;
typedef struct tagMIDINoteNameTable {
	void* m_pszTitle;
	long  m_lTitleLen;
	void* m_pszName[128];
	long  m_lNameLen[128];
	struct tagMIDINoteNameTable* m_pBasedOn;
	struct tagMIDINoteNameTable* m_pNextNoteNameTable;
	struct tagMIDINoteNameTable* m_pPrevNoteNameTable;
	void* m_pParent;
} MIDINoteNameTable;
typedef struct tagMIDIControllerNameTable {
	void* m_pszTitle;
	long  m_lTitleLen;
	void* m_pszName[128];
	long  m_lNameLen[128];
	struct tagMIDIControllerNameTable* m_pBasedOn;
	struct tagMIDIControllerNameTable* m_pNextControllerNameTable;
	struct tagMIDIControllerNameTable* m_pPrevControllerNameTable;
	void* m_pParent;
} MIDIControllerNameTable;
typedef struct tagMIDIRPNNameTable {
	void* m_pszTitle;
	long  m_lTitleLen;
	void* m_pszName[16384];
	long  m_lNameLen[16384];
	struct tagMIDIRPNNameTable* m_pBasedOn;
	struct tagMIDIRPNNameTable* m_pNextRPNNameTable;
	struct tagMIDIRPNNameTable* m_pPrevRPNNameTable;
	void* m_pParent;
} MIDIRPNNameTable;
typedef struct tagMIDINRPNNameTable {
	void* m_pszTitle;
	long  m_lTitleLen;
	void* m_pszName[16384];
	long  m_lNameLen[16384];
	struct tagMIDINRPNNameTable* m_pBasedOn;
	struct tagMIDINRPNNameTable* m_pNextNRPNNameTable;
	struct tagMIDINRPNNameTable* m_pPrevNRPNNameTable;
	void* m_pParent;
} MIDINRPNNameTable;
typedef struct tagMIDIInstrumentDefinition {
	void* m_pszTitle;
	long m_lTitleLen;
	MIDIControllerNameTable* m_pMIDIControllerNameTable;
	MIDIRPNNameTable* m_pMIDIRPNNameTable;
	MIDINRPNNameTable* m_pMIDINRPNNameTable;
	long m_lMIDIPatchNameNum;
	long m_lMIDIPatchNameBank[MIDIINSTRUMENTDEFINITION_MAXPATCHNAME];
	MIDIPatchNameTable* m_pMIDIPatchNameTable[MIDIINSTRUMENTDEFINITION_MAXPATCHNAME];
	long m_lMIDINoteNameNum;
	long m_lMIDINoteNameBank[MIDIINSTRUMENTDEFINITION_MAXNOTENAME];
	long m_lMIDINoteNameProgram[MIDIINSTRUMENTDEFINITION_MAXNOTENAME];
	MIDINoteNameTable* m_pMIDINoteNameTable[MIDIINSTRUMENTDEFINITION_MAXNOTENAME];
	struct tagMIDIInstrumentDefinition* m_pNextInstrumentDefinition;
	struct tagMIDIInstrumentDefinition* m_pPrevInstrumentDefinition;
	void* m_pParent;
} MIDIInstrumentDefinition;
typedef struct tagMIDIInstrument {
	MIDIPatchNameTable* m_pFirstPatchNameTable;
	MIDIPatchNameTable* m_pLastPatchNameTable;
	MIDINoteNameTable* m_pFirstNoteNameTable;
	MIDINoteNameTable* m_pLastNoteNameTable;
	MIDIControllerNameTable *m_pFirstControllerNameTable;
	MIDIControllerNameTable *m_pLastControllerNameTable;
	MIDIRPNNameTable* m_pFirstRPNNameTable;
	MIDIRPNNameTable* m_pLastRPNNameTable;
	MIDINRPNNameTable* m_pFirstNRPNNameTable;
	MIDINRPNNameTable* m_pLastNRPNNameTable;
	MIDIInstrumentDefinition* m_pFirstInstrumentDefinition;
	MIDIInstrumentDefinition* m_pLastInstrumentDefinition;
} MIDIInstrument;
long __stdcall MIDIInstrumentDefinition_SetRPNNameTable 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition, MIDIRPNNameTable* pMIDIRPNNameTable);
long __stdcall MIDIInstrumentDefinition_SetNRPNNameTable 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition, MIDINRPNNameTable* pMIDINRPNNameTable);
long __stdcall MIDIInstrumentDefinition_SetPatchNameTable 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition, long lBank, MIDIPatchNameTable* pMIDIPatchNameTable);
long __stdcall MIDIInstrumentDefinition_SetNoteNameTable 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition, long lBank, long lProgram, MIDINoteNameTable* pMIDINoteNameTable);
long __stdcall MIDIInstrumentDefinition_GetTitleA 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition, char* pszTitle, long lLen);
#define MIDIInstrumentDefinition_GetTitle MIDIInstrumentDefinition_GetTitleW
#define MIDIInstrumentDefinition_GetTitle MIDIInstrumentDefinition_GetTitleA
MIDIControllerNameTable* __stdcall MIDIInstrumentDefinition_GetControllerNameTable 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition);
MIDIRPNNameTable* __stdcall MIDIInstrumentDefinition_GetRPNNameTable 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition);
MIDINRPNNameTable* __stdcall MIDIInstrumentDefinition_GetNRPNNameTable 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition);
MIDIPatchNameTable* __stdcall MIDIInstrumentDefinition_GetPatchNameTable 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition, long lBank);
MIDINoteNameTable* __stdcall MIDIInstrumentDefinition_GetNoteNameTable 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition, long lBank, long lProgram);
MIDIInstrumentDefinition* __stdcall MIDIInstrumentDefinition_GetNextInstrumentDefinition 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition);
MIDIInstrumentDefinition* __stdcall MIDIInstrumentDefinition_GetPrevInstrumentDefinition 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition);
MIDIInstrument* __stdcall MIDIInstrumentDefinition_GetParent
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition);
MIDIInstrument* __stdcall MIDIInstrument_Create ();
void __stdcall MIDIInstrument_Delete (MIDIInstrument* pMIDIInstrument);
long __stdcall MIDIInstrument_InsertPatchNameTableAfter
(MIDIInstrument* pMIDIInstrument, 
 MIDIPatchNameTable* pMIDIPatchNameTable, MIDIPatchNameTable* pTargetPatchNameTable);
long __stdcall MIDIInstrument_AddPatchNameTable 
(MIDIInstrument* pMIDIInstrument, MIDIPatchNameTable* pMIDIPatchNameTable);
long __stdcall MIDIInstrument_RemovePatchNameTable
(MIDIInstrument* pMIDIInstrument, MIDIPatchNameTable* pMIDIPatchNameTable);
long __stdcall MIDIInstrument_InsertNoteNameTableAfter
(MIDIInstrument* pMIDIInstrument, 
 MIDINoteNameTable* pMIDINoteNameTable, MIDINoteNameTable* pTargetNoteNameTable);
long __stdcall MIDIInstrument_AddNoteNameTable 
(MIDIInstrument* pMIDIInstrument, MIDINoteNameTable* pMIDINoteNameTable);
long __stdcall MIDIInstrument_RemoveNoteNameTable
(MIDIInstrument* pMIDIInstrument, MIDINoteNameTable* pMIDINoteNameTable);
long __stdcall MIDIInstrument_InsertControllerNameTableAfter
(MIDIInstrument* pMIDIInstrument, 
 MIDIControllerNameTable* pMIDIControllerNameTable, MIDIControllerNameTable* pTargetControllerNameTable);
long __stdcall MIDIInstrument_AddControllerNameTable 
(MIDIInstrument* pMIDIInstrument, MIDIControllerNameTable* pMIDIControllerNameTable);
long __stdcall MIDIInstrument_RemoveControllerNameTable
(MIDIInstrument* pMIDIInstrument, MIDIControllerNameTable* pMIDIControllerNameTable);
long __stdcall MIDIInstrument_InsertRPNNameTableAfter
(MIDIInstrument* pMIDIInstrument, 
 MIDIRPNNameTable* pMIDIRPNNameTable, MIDIRPNNameTable* pTargetRPNNameTable);
long __stdcall MIDIInstrument_AddRPNNameTable 
(MIDIInstrument* pMIDIInstrument, MIDIRPNNameTable* pMIDIRPNNameTable);
long __stdcall MIDIInstrument_RemoveRPNNameTable
(MIDIInstrument* pMIDIInstrument, MIDIRPNNameTable* pMIDIRPNNameTable);
long __stdcall MIDIInstrument_InsertNRPNNameTableAfter
(MIDIInstrument* pMIDIInstrument, 
 MIDINRPNNameTable* pMIDINRPNNameTable, MIDINRPNNameTable* pTargetNRPNNameTable);
long __stdcall MIDIInstrument_AddNRPNNameTable 
(MIDIInstrument* pMIDIInstrument, MIDINRPNNameTable* pMIDINRPNNameTable);
long __stdcall MIDIInstrument_RemoveNRPNNameTable
(MIDIInstrument* pMIDIInstrument, MIDINRPNNameTable* pMIDINRPNNameTable);
long __stdcall MIDIInstrument_InsertInstrumentDefinitionAfter
(MIDIInstrument* pMIDIInstrument, 
 MIDIInstrumentDefinition* pMIDIInstrumentDefinition, MIDIInstrumentDefinition* pTargetInstrumentDefinition);
long __stdcall MIDIInstrument_AddInstrumentDefinition 
(MIDIInstrument* pMIDIInstrument, MIDIInstrumentDefinition* pMIDIInstrumentDefinition);
long __stdcall MIDIInstrument_RemoveInstrumentDefinition
(MIDIInstrument* pMIDIInstrument, MIDIInstrumentDefinition* pMIDIInstrumentDefinition);
MIDIPatchNameTable* __stdcall MIDIInstrument_GetFirstPatchNameTable
(MIDIInstrument* pMIDIInstrument);
MIDIPatchNameTable* __stdcall MIDIInstrument_GetLastPatchNameTable
(MIDIInstrument* pMIDIInstrument);
MIDINoteNameTable* __stdcall MIDIInstrument_GetFirstNoteNameTable
(MIDIInstrument* pMIDIInstrument);
MIDINoteNameTable* __stdcall MIDIInstrument_GetLastNoteNameTable
(MIDIInstrument* pMIDIInstrument);
MIDIControllerNameTable* __stdcall MIDIInstrument_GetFirstControllerNameTable
(MIDIInstrument* pMIDIInstrument);
MIDIControllerNameTable* __stdcall MIDIInstrument_GetLastControllerNameTable
(MIDIInstrument* pMIDIInstrument);
MIDIRPNNameTable* __stdcall MIDIInstrument_GetFirstRPNNameTable
(MIDIInstrument* pMIDIInstrument);
MIDIRPNNameTable* __stdcall MIDIInstrument_GetLastRPNNameTable
(MIDIInstrument* pMIDIInstrument);
MIDINRPNNameTable* __stdcall MIDIInstrument_GetFirstNRPNNameTable
(MIDIInstrument* pMIDIInstrument);
MIDINRPNNameTable* __stdcall MIDIInstrument_GetLastNRPNNameTable
(MIDIInstrument* pMIDIInstrument);
MIDIInstrumentDefinition* __stdcall MIDIInstrument_GetFirstInstrumentDefinition
(MIDIInstrument* pMIDIInstrument);
MIDIInstrumentDefinition* __stdcall MIDIInstrument_GetLastInstrumentDefinition
(MIDIInstrument* pMIDIInstrument);
MIDIPatchNameTable* __stdcall MIDIInstrument_GetPatchNameTableFromTitleA 
(MIDIInstrument* pMIDIInstrument, const char* pszTitle);
#define MIDIInstrument_GetPatchNameTableFromTitle MIDIInstrument_GetPatchNameTableFromTitleW
#define MIDIInstrument_GetPatchNameTableFromTitle MIDIInstrument_GetPatchNameTableFromTitleA
MIDINoteNameTable* __stdcall MIDIInstrument_GetNoteNameTableFromTitleA 
(MIDIInstrument* pMIDIInstrument, const char* pszTitle);
#define MIDIInstrument_GetNoteNameTableFromTitle MIDIInstrument_GetNoteNameTableFromTitleW
#define MIDIInstrument_GetNoteNameTableFromTitle MIDIInstrument_GetNoteNameTableFromTitleA
MIDIControllerNameTable* __stdcall MIDIInstrument_GetControllerNameTableFromTitleA 
(MIDIInstrument* pMIDIInstrument, const char* pszTitle);
#define MIDIInstrument_GetControllerNameTableFromTitle MIDIInstrument_GetControllerNameTableFromTitleW
#define MIDIInstrument_GetControllerNameTableFromTitle MIDIInstrument_GetControllerNameTableFromTitleA
MIDIRPNNameTable* __stdcall MIDIInstrument_GetRPNNameTableFromTitleA 
(MIDIInstrument* pMIDIInstrument, const char* pszTitle);
#define MIDIInstrument_GetRPNNameTableFromTitle MIDIInstrument_GetRPNNameTableFromTitleW
#define MIDIInstrument_GetRPNNameTableFromTitle MIDIInstrument_GetRPNNameTableFromTitleA
MIDINRPNNameTable* __stdcall MIDIInstrument_GetNRPNNameTableFromTitleA 
(MIDIInstrument* pMIDIInstrument, const char* pszTitle);
#define MIDIInstrument_GetNRPNNameTableFromTitle MIDIInstrument_GetNRPNNameTableFromTitleW
#define MIDIInstrument_GetNRPNNameTableFromTitle MIDIInstrument_GetNRPNNameTableFromTitleA
MIDIInstrumentDefinition* __stdcall MIDIInstrument_GetInstrumentDefinitionFromTitleA 
(MIDIInstrument* pMIDIInstrument, const char* pszTitle);
#define MIDIInstrument_GetInstrumentDefinitionFromTitle MIDIInstrument_GetInstrumentDefinitionFromTitleW
#define MIDIInstrument_GetInstrumentDefinitionFromTitle MIDIInstrument_GetInstrumentDefinitionFromTitleA
MIDIInstrument* __stdcall MIDIInstrument_LoadA (const char* pszFileName);
#define MIDIInstrument_Load MIDIInstrument_LoadW
#define MIDIInstrument_Load MIDIInstrument_LoadA
long __stdcall MIDIInstrument_LoadAdditionalA (MIDIInstrument* pMIDIInstrument, const char* pszFileName);
#define MIDIInstrument_LoadAdditional MIDIInstrument_LoadAdditionalW
#define MIDIInstrument_LoadAdditional MIDIInstrument_LoadAdditionalA