MIDIInstrument/MIDIInstrument.bas


' MIDIInstrumentDefinitionオブジェクトのRPN名テーブルを設定
Declare Function MIDIInstrumentDefinition_SetRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long, ByVal pMIDIRPNNameTable As Long) As Long

' MIDIInstrumentDefinitionオブジェクトのNRPN名テーブルを設定
Declare Function MIDIInstrumentDefinition_SetNRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long, ByVal pMIDINRPNNameTable As Long) As Long

' MIDIInstrumentDefinitionオブジェクトのパッチ名テーブルを設定
Declare Function MIDIInstrumentDefinition_SetPatchNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long, ByVal i As Long, _
    ByVal pMIDIPatchNameTable As Long) As Long

' MIDIInstrumentDefinitionオブジェクトのノート名テーブルを設定
Declare Function MIDIInstrumentDefinition_SetNoteNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long, ByVal i As Long, ByVal j As Long, _
    ByVal pMIDINoteNameTable As Long) As Long

' MIDIInstrumentDefinitionオブジェクトのタイトルを取得
Declare Function MIDIInstrumentDefinition_GetTitle Lib "MIDIInstrument.dll" _
    Alias "MIDIInstrumentDefinition_GetTitleA" _
    (ByVal pMIDIInstrumentDefinition As Long, ByVal pszTitle As String, _
    ByVal lLen As Long) As Long

' MIDIInstrumentDefinitionオブジェクトのコントローラー名テーブルを取得
Declare Function MIDIInstrumentDefinition_GetControllerNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long) As Long

' MIDIInstrumentDefinitionオブジェクトのRPN名テーブルを取得
Declare Function MIDIInstrumentDefinition_GetRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long) As Long

' MIDIInstrumentDefinitionオブジェクトのNRPN名テーブルを取得
Declare Function MIDIInstrumentDefinition_GetNRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long) As Long

' MIDIInstrumentDefinitionオブジェクトのパッチ名テーブルを取得
Declare Function MIDIInstrumentDefinition_GetPatchNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long, ByVal i As Long) As Long

' MIDIInstrumentDefinitionオブジェクトのノート名テーブルを取得
Declare Function MIDIInstrumentDefinition_GetNoteNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long, ByVal i As Long, ByVal j As Long) As Long
 
' 次のMIDIInstrumentDefinitionへのポインタを取得(なければNULL)
Declare Function MIDIInstrumentDefinition_GetNextInstrumentDefinition Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long) As Long

' 前のMIDIInstrumentDefinitionへのポインタを取得(なければNULL)
Declare Function MIDIInstrumentDefinition_GetPrevInstrumentDefinition Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long) As Long

' 親のMIDIInstrumentへのポインタを取得(なければNULL)
Declare Function MIDIInstrumentDefinition_GetParent Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrumentDefinition As Long) As Long


'*****************************************************************************
'
'　MIDIInstrumentクラス関数群
'
'*****************************************************************************

' MIDIInstrumentオブジェクトの生成
Declare Function MIDIInstrument_Create Lib "MIDIInstrument.dll" _
    () As Long

' MIDIInstrumentオブジェクトの削除
Declare Sub MIDIInstrument_Delete Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long)

' MIDIInstrumentにMIDIPatchNameTableを挿入(挿入位置は指定ターゲットの直後)
Declare Function MIDIInstrument_InsertPatchNameTableAfter Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, _
    ByVal pMIDIPatchNameTable As Long, ByVal pTargetPatchNameTable As Long) As Long

' MIDIInstrumentにMIDIPatchNameTableを追加(最後に挿入)
Declare Function MIDIInstrument_AddPatchNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDIPatchNameTable As Long) As Long

' MIDIInstrumentからMIDIPatchNameTableを除去(MIDIPatchNameTable自体は削除しない)
Declare Function MIDIInstrument_RemovePatchNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDIPatchNameTable As Long) As Long

' MIDIInstrumentにMIDINoteNameTableを挿入(挿入位置は指定ターゲットの直後)
Declare Function MIDIInstrument_InsertNoteNameTableAfter Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, _
    ByVal pMIDINoteNameTable As Long, ByVal pTargetNoteNameTable As Long) As Long

' MIDIInstrumentにMIDINoteNameTableを追加(最後に挿入)
Declare Function MIDIInstrument_AddNoteNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDINoteNameTable As Long) As Long

' MIDIInstrumentからMIDINoteNameTableを除去(MIDINoteNameTable自体は削除しない)
Declare Function MIDIInstrument_RemoveNoteNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDINoteNameTable As Long) As Long

' MIDIInstrumentにMIDIControllerNameTableを挿入(挿入位置は指定ターゲットの直後)
Declare Function MIDIInstrument_InsertControllerNameTableAfter Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, _
    ByVal pMIDIControllerNameTable As Long, ByVal pTargetControllerNameTable As Long) As Long

' MIDIInstrumentにMIDIControllerNameTableを追加(最後に挿入)
Declare Function MIDIInstrument_AddControllerNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDIControllerNameTable As Long) As Long

' MIDIInstrumentからMIDIControllerNameTableを除去(MIDIControllerNameTable自体は削除しない)
Declare Function MIDIInstrument_RemoveControllerNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDIControllerNameTable As Long) As Long

' MIDIInstrumentにMIDIRPNNameTableを挿入(挿入位置は指定ターゲットの直後)
Declare Function MIDIInstrument_InsertRPNNameTableAfter Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, _
    ByVal pMIDIRPNNameTable As Long, ByVal pMIDIRPNNameTable As Long) As Long

' MIDIInstrumentにMIDIRPNNameTableを追加(最後に挿入)
Declare Function MIDIInstrument_AddRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDIRPNNameTable As Long) As Long

' MIDIInstrumentからMIDIRPNNameTableを除去(MIDIRPNNameTable自体は削除しない)
Declare Function MIDIInstrument_RemoveRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDIRPNNameTable As Long) As Long

' MIDIInstrumentにMIDINRPNNameTableを挿入(挿入位置は指定ターゲットの直後)
Declare Function MIDIInstrument_InsertNRPNNameTableAfter Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, _
     ByVal pMIDINRPNNameTable As Long, ByVal pTargetNRPNNameTable As Long) As Long

' MIDIInstrumentにMIDINRPNNameTableを追加(最後に挿入)
Declare Function MIDIInstrument_AddNRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDINRPNNameTable As Long) As Long

' MIDIInstrumentからMIDINRPNNameTableを除去(MIDINRPNNameTable自体は削除しない)
Declare Function MIDIInstrument_RemoveNRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDINRPNNameTable As Long) As Long

' MIDIInstrumentにMIDIInstrumentDefinitionを挿入(挿入位置は指定ターゲットの直後)
Declare Function MIDIInstrument_InsertInstrumentDefinitionAfter Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, _
     ByVal pMIDIInstrumentDefinition As Long, ByVal pTargetInstrumentDefinition As Long) As Long

' MIDIInstrumentにMIDIInstrumentDefinitionを追加(最後に挿入)
Declare Function MIDIInstrument_AddInstrumentDefinition Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDIInstrumentDefinition As Long) As Long

' MIDIInstrumentからMIDIInstrumentDefinitionを除去(MIDIInstrumentDefinition自体は削除しない)
Declare Function MIDIInstrument_RemoveInstrumentDefinition Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long, ByVal pMIDIInstrumentDefinition As Long) As Long

' 最初のパッチ名テーブルへのポインタを返す(なければNULL) */
Declare Function MIDIInstrument_GetFirstPatchNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' 最後のパッチ名テーブルへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetLastPatchNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' 最初のノート名テーブルへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetFirstNoteNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' 最後のノート名テーブルへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetLastNoteNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' 最初のコントローラ名テーブルへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetFirstControllerNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' 最後のコントローラ名テーブルへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetLastControllerNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' 最初のRPN名テーブルへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetFirstRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' 最後のRPN名テーブルへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetLastRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' 最初のNRPN名テーブルへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetFirstNRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' 最後のNRPN名テーブルへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetLastNRPNNameTable Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' 最初のインストゥルメント定義へのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetFirstInstrumentDefinition Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' 最後のインストゥルメント定義へのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetLastInstrumentDefinition Lib "MIDIInstrument.dll" _
    (ByVal pMIDIInstrument As Long) As Long

' タイトルからMIDIPatchNameTableへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetPatchNameTableFromTitle Lib "MIDIInstrument.dll" _
    Alias "MIDIInstrument_GetPatchNameTableFromTitleA" _
    (ByVal pMIDIInstrument As Long, ByVal pszTitle As String) As Long

' タイトルからMIDINoteNameTableへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetNoteNameTableFromTitle Lib "MIDIInstrument.dll" _
    Alias "MIDIInstrument_GetNoteNameTableFromTitleA" _
    (ByVal pMIDIInstrument As Long, ByVal pszTitle As String) As Long

' タイトルからMIDIControllerNameTableへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetControllerNameTableFromTitle Lib "MIDIInstrument.dll" _
    Alias "MIDIInstrument_GetControllerNameTableFromTitleA" _
    (ByVal pMIDIInstrument As Long, ByVal pszTitle As String) As Long

' タイトルからMIDIRPNNameTableへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetRPNNameTableFromTitle Lib "MIDIInstrument.dll" _
    Alias "MIDIInstrument_GetRPNNameTableFromTitleA" _
    (ByVal pMIDIInstrument As Long, ByVal pszTitle As String) As Long

' タイトルからMIDINRPNNameTableへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetNRPNNameTableFromTitle Lib "MIDIInstrument.dll" _
    Alias "MIDIInstrument_GetNRPNNameTableFromTitleA" _
    (ByVal pMIDIInstrument As Long, ByVal pszTitle As String) As Long

' タイトルからMIDIInstrumentDefinitionへのポインタを返す(なければNULL)
Declare Function MIDIInstrument_GetInstrumentDefinitionFromTitle Lib "MIDIInstrument.dll" _
    Alias "MIDIInstrument_GetInstrumentDefinitionFromTitleA" _
    (ByVal pMIDIInstrument As Long, ByVal pszTitle As String) As Long

' Cakewalkのインストゥルメント定義ファイル(*.ins)からMIDIインストゥルメントを読み込み
Declare Function MIDIInstrument_Load Lib "MIDIInstrument.dll" _
    Alias "MIDIInstrument_LoadA" _
    (ByVal pszFileName As String) As Long

' Cakewalkのインストゥルメント定義ファイル(*.ins)からMIDIインストゥルメントを追加読み込み
Declare Function MIDIInstrument_LoadAdditional Lib "MIDIInstrument.dll" _
    Alias "MIDIInstrument_LoadAdditionalA" _
    (ByVal pMIDIInstrument As Long, ByVal pszFileName As String) As Long

